# polkit-qt-1

./: CMakeLists.txt  Mainpage.dox
agent/: CMakeLists.txt  listeneradapter.cpp  listeneradapter_p.h  polkitqt1-agent-listener.cpp  polkitqt1-agent-listener.h  polkitqt1-agent-session.cpp  polkitqt1-agent-session.h  polkitqtlistener.cpp
core/: CMakeLists.txt  polkitqt1-actiondescription.cpp  polkitqt1-authority.cpp  polkitqt1-authority.h  polkitqt1-details.cpp  polkitqt1-identity.cpp  polkitqt1-subject.cpp  polkitqt1-temporaryauthorization.cpp
examples/: CMakeLists.txt  PkExample.cpp
examples/agent/: CMakeLists.txt  pkagentexample.cpp
gui/: CMakeLists.txt  polkitqt1-gui-action.cpp
test/: CMakeLists.txt
